--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@100;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@100;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -49,11 +50,14 @@
                             </div>
                         </div>
                         <div class="social-icons">
-                            <a href="https://www.linkedin.com/in/amarjeet-kumar-885968201" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
-                            <a href="https://github.com/Amarjeetk01" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
-                            <a href="https://www.instagram.com/amar_jeetkr/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                          </div>
-                          
+                            <a href="https://www.linkedin.com/in/amarjeet-kumar-885968201" target="_blank"
+                                class="social-icon"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/Amarjeetk01" target="_blank" class="social-icon"><i
+                                    class="fab fa-github"></i></a>
+                            <a href="https://www.instagram.com/amar_jeetkr/" target="_blank" class="social-icon"><i
+                                    class="fab fa-instagram"></i></a>
+                        </div>
+
                     </div>
 
                 </div>
@@ -121,7 +125,8 @@
                         <p>Bachelor of Technology (B.Tech) - Present</p>
                         <h3>Jawahar Navodaya Vidyalaya Saran</h3>
                         <p>High School and Intermediate (10th and 12th)</p>
-                        <a href="https://drive.google.com/file/d/12MZHrc2qL4Qtr8STt0uJH6e5lpTAzej9/view?usp=sharing" class="download-btn">Resume</a>
+                        <a href="https://drive.google.com/file/d/12MZHrc2qL4Qtr8STt0uJH6e5lpTAzej9/view?usp=sharing"
+                            class="download-btn">Resume</a>
                         <div class="flap"></div>
                     </div>
 
@@ -292,19 +297,22 @@ padding-bottom: 0px;
     <section id="more">
         <div class="more-about">
             <div class="more-left">
-            <div class="hobby"><div>
-                <h1>Hobby</h1>
-                <a><li>Playing Chess <i class="fa-solid fa-chess"></i></li></a>
-                <li>Writing & Reading Poetry<a href="https://amarjeetpoetry.blogspot.com"> ✍🏻</a></li>
-            </div>
-            <div>
-                <div class="date-container">
-                    <h4 style="font-family: 'Big Shoulders Inline Text', cursive; font-size: 30px;">Today's Date <i class="fa-regular fa-calendar"></i></h4>
-                    <p id="kindOfDay"></p>
+                <div class="hobby">
+                    <h1>Hobby</h1>
+                    <a>
+                        <li>Playing Chess <i class="fa-solid fa-chess"></i></li>
+                    </a>
+                    <li>Writing & Reading Poetry<a href="https://amarjeetpoetry.blogspot.com"> ✍🏻</a></li>
+                </div>
+                <div>
+                    <div class="date-container">
+                        <h4 style="font-family: 'Big Shoulders Inline Text', cursive; font-size: 30px;">Today's Date <i
+                                class="fa-regular fa-calendar"></i></h4>
+                        <p id="kindOfDay"></p>
+                    </div>
                 </div>
             </div>
-            </div>    
-            </div>
+
             <div class="skill-logo">
 
                 <div class="ag-courses_box">
