--- a/index.html
+++ b/index.html
@@ -172,6 +172,63 @@ padding-bottom: 0px;
         <div class="project">
             <div class="project-wrapper">
                 <div class="project-img">
+                    <img src="./images/project-7.png" alt="" />
+                </div>
+                <div class="project-body">
+                    <h2>AmarStore<i class="fa-solid fa-cart-shopping"></i></h2>
+                    <p>
+                        AmarStore, an E-commerce Application, showcasing proficiency in full-stack development. Leveraged
+                        Node.js, Express.js, and MongoDB for the backend, and React, Redux, and Stripe for the frontend, providing users
+                        with an intuitive platform for browsing products, managing shopping carts, and processing payments.
+
+                    </p>
+                    <a href="https://amarstore-zeta.vercel.app/">
+                        <i class="fa-solid fa-person-walking"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-wrapper">
+                <div class="project-img">
+                    <img src="./images/project-6.png" alt="" />
+                </div>
+                <div class="project-body">
+                    <h2>Moviomix Web-App<i class="fa-solid fa-film"></i></h2>
+                    <p>
+                        The project seems to be a web application for exploring and interacting with movie-related
+                        content, allowing users to view details about movies, search for movies, explore different genres, and more. It utilizes
+                        modern web technologies and React ecosystem tools for building a dynamic and user-friendly interface.
+
+                    </p>
+                    <a href="https://moviomix.vercel.app/">
+                        <i class="fa-solid fa-person-walking"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-wrapper">
+                <div class="project-img">
+                    <img src="./images/project-8.jpeg" alt="" />
+                </div>
+                <div class="project-body">
+                    <h2>Bhagwat Gita Web-App<i class="fa-solid fa-hands-praying"></i></h2>
+                    <p>
+                        This project is a React-based application. It employs Material-UI for styling and
+                        UI elements, and it fetches data from a JSON file to dynamically display chapter details and navigate between
+                        chapters.
+
+                    </p>
+                    <a href="https://bhagwatgitaproject.vercel.app/">
+                        <i class="fa-solid fa-person-walking"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-wrapper">
+                <div class="project-img">
                     <img src="./images/project-1.jpg" alt="" />
                 </div>
                 <div class="project-body">
